Bug 342775 - Marble crashes when pause an empty route preview.
Summary: Marble crashes when pause an empty route preview.
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.9 (KDE 4.14)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-12 20:47 UTC by Sergey Popov
Modified: 2015-07-24 21:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey Popov 2015-01-12 20:47:22 UTC
Marble crashes when I try to pause an empty route preview.

Reproducible: Always

Steps to Reproduce:
1. Go to "Routing" panel. (Settings->Panels->Routing)
2. Clear a route by clicking "Clear Route" button.
3. Start route Preview. (Click "Preview Route" button)
4. Try to pause it.

Actual Results:  
Marble crashes


Backtrace:
#0  Marble::TourPlayback::pause (this=0x0) at /home/sergobot/marble/sources/src/lib/marble/TourPlayback.cpp:184
#1  0x00007ffff67d2578 in Marble::RoutingWidget::toggleRoutePlay (this=0xd1d6a0) at /home/sergobot/marble/sources/src/lib/marble/routing/RoutingWidget.cpp:870
#2  0x00007ffff7a86a7a in QMetaObject::activate (sender=sender@entry=0xd301c0, m=m@entry=0x7ffff78e18e0 <QAbstractButton::staticMetaObject>, 
    local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fffffffcab0) at kernel/qobject.cpp:3567
#3  0x00007ffff7457f32 in QAbstractButton::clicked (this=this@entry=0xd301c0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:219
#4  0x00007ffff71b8bf3 in QAbstractButtonPrivate::emitClicked (this=this@entry=0xd301f0) at widgets/qabstractbutton.cpp:548
#5  0x00007ffff71b9de0 in QAbstractButtonPrivate::click (this=this@entry=0xd301f0) at widgets/qabstractbutton.cpp:541
#6  0x00007ffff71b9ed4 in QAbstractButton::mouseReleaseEvent (this=0xd301c0, e=0x7fffffffcf50) at widgets/qabstractbutton.cpp:1123
#7  0x00007ffff727132a in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:723
#8  0x00007ffff6e4ece8 in QWidget::event (this=0x0, event=0x7fffffffc8c0) at kernel/qwidget.cpp:8775
#9  0x00007ffff6dff11c in QApplicationPrivate::notify_helper (this=this@entry=0x6c0170, receiver=receiver@entry=0xd301c0, e=e@entry=0x7fffffffcf50) at kernel/qapplication.cpp:4570
#10 0x00007ffff6e059be in QApplication::notify (this=<optimized out>, receiver=0xd301c0, e=0x7fffffffcf50) at kernel/qapplication.cpp:4113
#11 0x00007ffff7a7286d in QCoreApplication::notifyInternal (this=0x7fffffffdb80, receiver=receiver@entry=0xd301c0, event=event@entry=0x7fffffffcf50)
    at kernel/qcoreapplication.cpp:953
#12 0x00007ffff6e0507f in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#13 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xd301c0, event=event@entry=0x7fffffffcf50, alienWidget=alienWidget@entry=0xd301c0, 
    nativeWidget=nativeWidget@entry=0x7450f0, buttonDown=buttonDown@entry=0x7ffff78f3578 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3178
#14 0x00007ffff6e7abde in QETWidget::translateMouseEvent (this=this@entry=0x7450f0, event=event@entry=0x7fffffffd2b0) at kernel/qapplication_x11.cpp:4634
#15 0x00007ffff6e7a477 in QApplication::x11ProcessEvent (this=0x7fffffffdb80, event=event@entry=0x7fffffffd2b0) at kernel/qapplication_x11.cpp:3627
#16 0x00007ffff6ea2432 in x11EventSourceDispatch (s=0x6bca90, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#17 0x00007ffff4e6fc5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007ffff4e6ff48 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007ffff4e6fffc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007ffff7aa0031 in QEventDispatcherGlib::processEvents (this=0x6bc3c0, flags=...) at kernel/qeventdispatcher_glib.cpp:434
#21 0x00007ffff6ea24e6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#22 0x00007ffff7a714f1 in QEventLoop::processEvents (this=this@entry=0x7fffffffd690, flags=...) at kernel/qeventloop.cpp:149
#23 0x00007ffff7a71805 in QEventLoop::exec (this=this@entry=0x7fffffffd690, flags=...) at kernel/qeventloop.cpp:204
#24 0x00007ffff7a76f67 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1225
#25 0x0000000000425949 in main (argc=2, argv=0x7fffffffdd38) at /home/sergobot/marble/sources/src/apps/marble-qt/qtmain.cpp:258
Comment 1 Dennis Nienhüser 2015-07-24 21:33:30 UTC
Git commit e9f6cadd0285214e0b7b7569d012123e317a58c8 by Dennis Nienhüser, on behalf of Sanjiban Bairagya.
Committed on 24/07/2015 at 21:28.
Pushed by nienhueser into branch 'master'.

Fix non-working route preview

See also https://git.reviewboard.kde.org/r/122112/

M  +6    -3    src/lib/marble/routing/RoutingWidget.cpp

http://commits.kde.org/marble/e9f6cadd0285214e0b7b7569d012123e317a58c8