This patch fixes a bug, causing segementation fault on routing playback (play/pause button)

REVIEW: 122112
BUG: 342775